# SetSpace

./: .gitignore  ABSTRACT.md  Makefile  README.md  pyproject.toml  requirements.txt
case_studies/: shared.py  sphere_utils.py
case_studies/ahmedml_surface_forces/: benchmark.py  common.py  dataset.py  evaluate.py  models.py  plot_convergence.py  plot_qualitative.py  prepare_dataset.py  run_benchmark.py  train.py
case_studies/airfrans_field_prediction/: benchmark.py  common.py  dataset.py  models.py  plot_convergence.py  plot_qualitative.py  prepare_dataset.py  run_benchmark.py
case_studies/darcy_1d/: common.py  plot_convergence.py  plot_weight_analysis.py  sensor_ablation.py  train.py
case_studies/point_cloud_consistency/: benchmark.py  common.py  dataset.py  evaluate.py  evaluate_regression.py  models.py  plot_consistency.py  plot_overview.py  plot_qualitative.py  plot_regression.py  plot_regression_convergence.py  plot_regression_qualitative.py  pointnext.py  run_benchmark.py  run_mean_regression.py  train.py  (+1 more)
experiments/: ablation_sensor_count.py  common.py  plot_convergence.py  plot_weight_analysis.py  train_darcy_1d.py
geometry_aggregation/: __init__.py  quadrature_head.py  quadrature_weights.py  setonet.py  utils.py
paper/: Set-Encoder.tex  generate_result_tables.py  references.bib
set_encoders/: __init__.py  encoders.py  mmq.py  models.py  utils.py  weights.py
set_space.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_benchmark_variants.py  test_case_study_models.py  test_mmq2.py  test_set_encoder_compat.py
(+34 files in other folders)
