[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "set-space"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "datasets>=2.14",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
include = ["set_encoders*", "case_studies*", "data*"]
