[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "set-space"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
ahmedml = [
    "pyvista>=0.43",
]
airfrans = [
    "airfrans",
]

[tool.setuptools.packages.find]
include = ["set_encoders*", "case_studies*"]
